# nineteen

./: .pre-commit-config.yaml  README.md  Taskfile.yml  bootstrap.sh  docker-compose.dev.yml  docker-compose.observability.yml  docker-compose.prod.yml  docker-compose.testing.yml  docker-compose.yml  pyproject.toml  redis.conf  ruff.toml  update-nginx-port.sh
config/: Caddyfile  grafana-datasource.yaml  grafana-redis-realtime.json  grafana-validator-errors.json  grafana-validator-general.json  loki-config.yaml  otel-config.yaml  tempo-config.yaml
core/: constants.py  create_config.py  example_config.py  task_config.py  utils.py
dockerfiles/: control_node.dockerfile  entry_node.dockerfile  hybrid_node.dockerfile  organic_node.dockerfile  query_node.dockerfile  synthetic_node.dockerfile
docs/: dev.md  mining.md  recommended-compute.md  validating.md
examples/: README.md  langchain_sdk.py  openai_sdk.py
miner/: config.py  (+2 more)
validator/hybrid_node/: pyproject.toml  requirements.txt
validator/hybrid_node/src/: main.py  query_config.py  utils.py
validator/hybrid_node/src/api/: app.py  request_models.py  utils.py
validator/hybrid_node/src/api/core/: configuration.py  middleware.py
validator/hybrid_node/src/api/dependencies/: deps.py
validator/hybrid_node/src/api/routers/: generic.py  image.py  text.py
validator/hybrid_node/src/handlers/: process_queries.py  synthetics_handler.py
validator/hybrid_node/src/query/: nonstream.py  streaming.py
validator/synthetic_node/: pyproject.toml
validator/synthetic_node/src/: main.py  process_queries.py  query_config.py
(+94 files in other folders)
