[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hybrid_node"
version = "1.0.0"
description = "Query node service for the validator"
dynamic = ["dependencies"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["hybrid_node*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
